Fixed horizontal overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 /* ------------------------------- UTILITY CLASSES  ------------------------------- */
@@ -82,7 +83,7 @@ body {
 /* ------------------- Navbar ------------------- */
 
 .features-navbar {
-  width: 100vw;
+  max-width: 100vw;
   height: 8rem;
   background: #fff;
   position: fixed;
@@ -370,9 +371,9 @@ body {
 }
 
 .mainFeature-item {
-  width: 35rem;
+  max-width: 35rem;
   height: 75rem;
-  border-radius: .5rem;
+  border-radius: 1rem;
   -webkit-box-shadow: 4px 9px 69px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 4px 9px 69px -9px rgba(0, 0, 0, 0.75);
 }
@@ -383,13 +384,13 @@ body {
   -o-object-fit: contain;
   object-fit: contain;
   padding-top: 2rem;
-  border-radius: .5rem;
+  border-radius: 1rem;
 }
 
 .mainFeature-item_bottom {
   height: 60%;
   width: 100%;
-  border-radius: .5rem;
+  border-radius: 1rem;
 }
 
 .mainFeature-item_bottom>h4 {
@@ -440,7 +441,7 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   margin-bottom: 1.5rem;
 }
 
-/* ------  Bottom Banner  ------ */
+/* ----------------------  Bottom Banner  ---------------- */
 .bottom-banner {
   max-width: 100vw;
   height: 20rem;
@@ -454,9 +455,7 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  /* -webkit-box-flex: 0 1 grow;
-  -ms-flex-positive: 0 1 grow;
-  flex-grow: 0 1 grow; */
+
 }
 
 .bottom-banner-left {
@@ -467,15 +466,22 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+
 }
 
 .bottom-banner-left>button {
+
+  height: auto;
+  max-width: 50rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -488,6 +494,7 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   width: 2rem;
   height: 2rem;
   fill: #fff;
+  margin-left: .2rem;
 }
 
 .bottom-banner-left>button>svg.icon:hover {
@@ -511,6 +518,7 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
 .bottom-banner__title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 3.5rem;
+  color: #0f579e;
 }
 
 /* ------------- Media Queries -------------- */
@@ -566,6 +574,24 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   #mail {
     display: none;
   }
+
+  .bottom-banner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .bottom-banner-right {
+    width: 100%;
+
+  }
+
+  .bottom-banner__title {
+    font-size: 3rem;
+    margin-top: 2rem;
+    text-align: center;
+  }
 }
 
 
@@ -574,5 +600,26 @@ div.sf-banner.darkBlue.flexBox-col>h3 {
   .sf-banner,
   .page-desc {
     font-size: 2rem;
+  }
+
+  .bottom-banner-left {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 335px) {
+  .mainFeature-wrapper {
+
+    grid-template-columns: repeat(auto-fit, 30rem);
+    grid-template-rows: repeat(auto-fit, 75rem);
+  }
+
+  .mainFeature-item {
+    width: 30rem;
+    height: 75rem;
+  }
+
+  .mainFeature-item_bottom>h4 {
+    font-size: 2.5rem;
   }
 }
